--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/psychelzh/zutils/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/psychelzh/zutils/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/psychelzh/zutils/branch/main/graph/badge.svg)](https://app.codecov.io/gh/psychelzh/zutils?branch=main)
 <!-- badges: end -->
 
 This is my personal R package storing some useful functions for my daily work.
