Add r-universe installation guide
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,5 +28,11 @@ You can install the development version of zutils from [GitHub](https://github.c
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("psychelzh/zutils")
+devtools::install_github("psychelzh/zutils@develop")
+```
+
+Or you can install the stable version of zutils from [r-universe](https://psychelzh.r-universe.dev/) with:
+
+``` r
+install.packages("zutils", repos = c(getOption("repos"), "https://psychelzh.r-universe.dev"))
 ```
